# glib-android

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  glib-android.c  glib-android.h  glib-android.pc.in
tests/test-log/: .gitignore  AndroidManifest.xml
tests/test-log/jni/: Android.mk  main.c
tests/test-log/res/values/: strings.xml
tests/test-mainloop/: .gitignore  AndroidManifest.xml  build.xml
tests/test-mainloop/jni/: Android.mk  main.c
tests/test-mainloop/res/values/: strings.xml
